# tools-astro

./: Makefile  README.md  code-from-remote.md  environment.yml  fetch_archives.py  odaapi.stdout  odarequest.xml  on-datasources.md  update_tool_version.py
.github/workflows/: ci.yaml  lint-and-test.yml  live-preview.yaml  pr.yaml  python-package-conda.yml  update-archives-list.yml
astropytools/: .gitignore  .shed.yml  README.md  fits2bitmap.xml  fitsinfo.out  fitsinfo.xml  gentool.sh
astropytools/test-data/: legacysurvey_image.fits
deploy-preview/: ansible.cfg  deploy.yml  hosts  remove.yml
gammapy/: gammapy.xml  gentool.sh
gammapy/test-data/: myconfig.yaml
gammapysim/: gammapysim.py  gammapysim.xml  pyproject.toml  setup.py
tools/aafrag/: .shed.yml  Spectrum.py  aafrag_astro_tool.xml
tools/agn-cacades/: .shed.yml  Simulate.py  agn_cacades_astro_tool.xml
tools/analyse-short-astro-text/: .shed.yml  Untitled.py  analyse_short_astro_text_astro_tool.xml  aux_functions.py  complete_pipeline.py  extract_data_predict_workflow.py  fetch_atel.py  fetch_gcn.py  pipeline_astrobert.py  pipeline_create_url_vector.py  pipeline_predict_sensitivity.py  pipeline_provide_workflows.py  pipeline_ra_dec.py  pipeline_source_classes.py  pipeline_sources.py  pipeline_telescope.py  pipeline_vectorize_text.py  predict_vectorised_atel.py  predict_vectorised_text.py  query_tns_aux.py  telescope_type_prediction.py
tools/astropytools/: .shed.yml  csv2fits.xml  fits2bitmap.xml  fits2csv.xml  fits2table.xml  (+1 more)
tools/gammapy/gammapysim/: gammapysim.py  meta.yaml  pyproject.toml
(+340 files in other folders)
