[tool.poetry]
name = "gammapysim"
version = "0.1.0"
description = ""
authors = ["Volodymyr Savchenko <contact@volodymyrsavchenko.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gammapysim = 'gammapysim:main'