[tool.poetry]
name = "gammapysim"
version = "0.2.0"
description = ""
authors = ["Volodymyr Savchenko <Volodymyr.Savchenko@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gammapysim = "gammapysim:main"

